@@ -1665,6 +1665,16 @@ things, but the two biggies are the prototype and the printers list
 # this kind of options does not make sense. Such driver are for
 # example "hpijs" and "hl1250".
 
+# And the driver's <execution> section can also contain a
+#
+# <nopageaccounting/>
+#
+# This suppresses the inserting of page accounting code (for CUPS)
+# into the PostScript data stream. Some drivers lead to unexpected
+# behavior with that. Especially for the generic PostScript driver
+# (which does not use Ghostscript in most cases) the accounting code
+# should not be inserted.
+
 # The prototype defines what command the backends run to drive this
 # printer.  It must take postscript on stdin and generate "printer
 # stuff" on stdout.  Various %A, %B, etc substitution "spots" are
@@ -3502,6 +3512,10 @@ Foomatic keywords
 *FoomaticRIPCammandLine: "<code>"
     <code>: The command line prototype, with spots to insert option
             settings ("%A", "%B", ...).
+
+*FoomaticNoPageAccounting: <boolean value>
+    <value>: If True, no accounting code will be inserted into the
+             PostScript data stream.
 
 *FoomaticRIPOption <name>: <type> <style> <spot> [<order>]
     <name>: Option name; <type>: enum, bool, int, float;
